--- a/margin-and-padding/margin-and-padding-1/style.css
+++ b/margin-and-padding/margin-and-padding-1/style.css
@@ -7,15 +7,16 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding: 25px;
+  margin: 10px;
+  height: 200;
 }
 
 .two {
   background: lightblue;
   border: 3px solid purple;
   /* CHANGE ME */
-  margin-bottom: 0px;
+  margin-bottom: 30px;
 }
 
 .three {
@@ -23,6 +24,9 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 30px;
+  margin-left: 320px;
+  /* ALSO WORKS
+  margin-left: auto; 
+  */
 }
